--- a/wp-content/themes/filip/react-src/package.json
+++ b/wp-content/themes/filip/react-src/package.json
@@ -8,6 +8,7 @@
         "materialize-css": "^1.0.0-rc.2",
         "react": "^16.6.3",
         "react-dom": "^16.6.3",
+        "react-html-parser": "^2.0.2",
         "react-redux": "^6.0.0",
         "react-router-dom": "^4.3.1",
         "redux": "^4.0.1",
