--- a/wp-content/themes/filip/react-src/package.json
+++ b/wp-content/themes/filip/react-src/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@devloco/react-scripts-wptheme": "2.1.1-wptheme-2.1.4",
+        "animate.css": "^3.7.0",
         "axios": "^0.18.0",
         "materialize-css": "^1.0.0-rc.2",
         "react": "^16.6.3",
