--- a/wp-content/themes/filip/react-src/package.json
+++ b/wp-content/themes/filip/react-src/package.json
@@ -8,6 +8,7 @@
         "axios": "^0.18.0",
         "materialize-css": "^1.0.0-rc.2",
         "react": "^16.6.3",
+        "react-animate-on-scroll": "^2.1.5",
         "react-dom": "^16.6.3",
         "react-html-parser": "^2.0.2",
         "react-redux": "^6.0.0",
